# brain_raffle_company_biologists

./: .gitignore  README.md  pyproject.toml
src/brain_raffle_company_biologists/: __init__.py
src/brain_raffle_company_biologists/conference_100/: live_draw.ipynb
